--- a/scrap_paper.Rmd
+++ b/scrap_paper.Rmd
@@ -8,14 +8,21 @@
   ) +
   
   
-    theme(axis.text = element_text(size = 16)) + # axes numbers
-  theme(axis.title = element_text(size = 20)) + # axes titles
-  theme(legend.title=element_text(size = 16)) + 
-  theme(legend.text=element_text(size = 16))
+  
+  UNKNOWN forb 1 and 2 at Site 2_4:
+  belt.spp_2019_load <- read.csv(here("data/Piru_Transect_Belt.xlsx", sheet == "belt_transects_raw")) %>% 
+  dplyr::select(ch1_site, ch1_transect, ch1_species) %>% 
+                             
+  
+  OMIT any variable that contains...                           
+seedbankgerm_plantcluster %>%  
+  filter(!str_detect(status, "Unknown"))
+  
+  OMIT exact specific variable...
+  seedbankgerm_plantcluster %>%  
+  filter(!status %in% "Unknown")
   
   
-   #rename(NewNameA = OldName1)
-
 # CANOPY HEIGHT
 ```{r}
 # stand height 
@@ -437,59 +444,200 @@ fig.1a <- ggplot(data = cover_byleaftype_wide) +
 ```
 
 
+- germination (n/g soil) by family
+```{r germination (n/g soil) by family}
+
+seedbankgerm_cluster_prep <- germination_depthtreat %>% # left join seedbank cluster name to germ data
+  left_join(seed.subgrp.df, by = c("stand_core", "site")) %>% 
+  rename(sdbk_clust = sub_grp) %>% 
+  mutate(sdbk_clust = as.character(sdbk_clust)) %>% 
+  dplyr::select(species_diversity, status, lifescycle, lifeform, family, sdbk_clust, n_per_g, stand_core, treatment, depth_name, stand_core_depth_treat) %>% 
+  mutate(species_diversity = case_when(
+    species_diversity == "Erodium moschatum" ~ "Erodium spp.", 
+    species_diversity == "Erodium cicutarium" ~ "Erodium spp.", 
+        species_diversity == "Phacelia tanacetifolia" ~ "Phacelia spp.", 
+    species_diversity == "Phacelia viscida" ~ "Phacelia spp.", 
+    TRUE ~ species_diversity)
+  )
+
+seedbankgerm_cluster <- seedbankgerm_cluster_prep %>%  
+  group_by(species_diversity, status, lifescycle, lifeform, family, sdbk_clust, stand_core) %>% 
+  summarise(total_seeds = sum(n_per_g), 
+            n_trays = length(stand_core_depth_treat), 
+            avg_density = mean(total_seeds/8)) # average seed density across  potential trays
 
 
- Multilevel pattern analysis
- ---------------------------
+hist(seedbankgerm_cluster$avg_density)
 
- Association function: IndVal.g
- Significance level (alpha): 0.05
+median_seedgermcluster <- seedbankgerm_cluster %>% 
+   group_by(species_diversity, status, lifescycle, lifeform, family, sdbk_clust) %>% 
+  summarise(median_seedden = round(median(avg_density, na.rm = TRUE), 3), .groups = "drop") %>% 
+  mutate(sdbk_clust = recode(sdbk_clust, 
+                           `1` = "DEG", 
+                           `2` = "MTX", 
+                           `3` = "INT")) %>% 
+  pivot_wider(names_from = sdbk_clust, values_from = median_seedden, values_fill = 0) %>% 
+  
+  rename(Species = species_diversity, 
+          Lifecycle = lifescycle,
+         Status = status,
+         Lifeform = lifeform, 
+         Family = family
+         ) %>% 
+  
+  mutate(Status = case_when(
+    Status == "native" ~ "nat", 
+    Status == "nonnative" ~ "nn", 
+    TRUE ~ Status)
+  ) %>% 
+  mutate(Lifecycle = case_when(
+    Lifecycle == "annual" ~ "ann", 
+    Lifecycle == "perennial" ~ "per", 
+    TRUE ~ Lifecycle)
+    )  %>% 
+   relocate(Status, Lifecycle, Lifeform, Family, DEG, MTX, INT, .after = Species)  %>% 
+  mutate(
+    DEG = case_when(
+      DEG == 0 ~ "-",                            # Replace 0 with NA
+      DEG > 0 & DEG < 0.001 ~ "<0.001",                    # Replace values between 0 and 0.001
+      TRUE ~ as.character(DEG)                             # Keep all other values
+    ),
+    MTX = case_when(
+      MTX == 0 ~ "-",
+      MTX > 0 & MTX < 0.001 ~ "<0.001",
+      TRUE ~ as.character(MTX)
+    ),
+    INT = case_when(
+      INT == 0 ~ "-",
+      INT > 0 & INT < 0.001 ~ "<0.001",
+      TRUE ~ as.character(INT)
+    )
+  )
+  
+median_seedgermcluster
+  
 
- Total number of species: 52
- Selected number of species: 11 
- Number of species associated to 1 group: 5 
- Number of species associated to 2 groups: 2 
- Number of species associated to 3 groups: 2 
- Number of species associated to 4 groups: 2 
+      
 
- List of species associated to each combination: 
+# Print as a gt table
+table_germ <- median_seedgermcluster %>%
+  gt() %>%
+  tab_header(
+    title = "Median Average Germination by Cluster",
+    #subtitle = "Mean ± Standard Deviation for Elevation, Hillshade, Slope, Southwestness, Fire Events, and Coordinates"
+  ) %>%
+  cols_align(
+    align = "left", # Center alignment
+    columns = "Species" # Specify the "cluster" column
+  ) %>%
+  tab_options(
+    table.width = pct(80) # Make the table width 100%
+  ) 
+table_germ
 
- Group 1  #sps.  1 
-                  A      B  stat p.value  
-Lupinus.spp. 0.8571 0.4000 0.586    0.04 *
+# Export the table as a word doc.
+gtsave(table_germ, 
+       "Ch1_Degradation_figures/table_germ_clustergroups_dec11.docx", # can also export as .png
+       expand = 10)
 
- Group 4  #sps.  1 
-                   A      B  stat p.value   
-Festuca.myros 0.8444 0.6250 0.726    0.01 **
+```
 
- Group 5  #sps.  3 
-                            A     B  stat p.value   
-Heteromeles.arbutifolia 1.000 1.000 1.000   0.005 **
-Rhus.ovata              0.863 0.600 0.720   0.010 **
-Rhamnus.ilicifolia      1.000 0.400 0.632   0.010 **
 
- Group 1+3  #sps.  1 
-                         A      B  stat p.value   
-Hirschfeldia.incana 0.8869 0.7500 0.816   0.005 **
+#
+- germination (n/g soil) by family
+```{r germination (n/g soil) by family}
 
- Group 2+4  #sps.  1 
-                          A      B  stat p.value   
-Centaurea.melitensis 0.9715 0.8667 0.918   0.005 **
+seedbankgerm_cluster_prep <- germination_depthtreat %>% # left join seedbank cluster name to germ data
+  left_join(seed.subgrp.df, by = c("stand_core", "site")) %>% 
+  rename(sdbk_clust = sub_grp) %>% 
+  mutate(sdbk_clust = as.character(sdbk_clust)) %>% 
+  dplyr::select(species_diversity, status, lifescycle, lifeform, family, sdbk_clust, n_per_g, stand_core, treatment, depth_name, stand_core_depth_treat) %>% 
+  mutate(species_diversity = case_when(
+    species_diversity == "Erodium moschatum" ~ "Erodium spp.", 
+    species_diversity == "Erodium cicutarium" ~ "Erodium spp.", 
+        species_diversity == "Phacelia tanacetifolia" ~ "Phacelia spp.", 
+    species_diversity == "Phacelia viscida" ~ "Phacelia spp.", 
+    TRUE ~ species_diversity)
+  )
 
- Group 1+3+4  #sps.  1 
-                   A      B  stat p.value   
-Avena.barbata 0.9453 0.9286 0.937   0.005 **
+seedbankgerm_cluster <- seedbankgerm_cluster_prep %>%  
+  group_by(species_diversity, status, lifescycle, lifeform, family, sdbk_clust, stand_core) %>% 
+  summarise(total_seeds = sum(n_per_g), 
+            n_trays = length(stand_core_depth_treat), 
+            avg_density = mean(total_seeds/8)) # average seed density across  potential trays
 
- Group 2+4+5  #sps.  1 
-                  A      B  stat p.value   
-Stipa.lepida 0.9958 0.6500 0.805   0.005 **
 
- Group 1+2+3+4  #sps.  1 
-                   A      B stat p.value   
-Bromus.rubens 0.9573 0.9429 0.95   0.005 **
+hist(seedbankgerm_cluster$avg_density)
 
- Group 1+3+4+5  #sps.  1 
-                     A      B  stat p.value  
-Bromus.diandrus 0.9836 0.7273 0.846    0.03 *
----
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+median_seedgermcluster <- seedbankgerm_cluster %>% 
+   group_by(species_diversity, status, lifescycle, lifeform, family, sdbk_clust) %>% 
+  summarise(median_seedden = round(median(avg_density, na.rm = TRUE), 3), .groups = "drop") %>% 
+  mutate(sdbk_clust = recode(sdbk_clust, 
+                           `1` = "DEG", 
+                           `2` = "MTX", 
+                           `3` = "INT")) %>% 
+  pivot_wider(names_from = sdbk_clust, values_from = median_seedden, values_fill = 0) %>% 
+  
+  rename(Species = species_diversity, 
+          Lifecycle = lifescycle,
+         Status = status,
+         Lifeform = lifeform, 
+         Family = family
+         ) %>% 
+  
+  mutate(Status = case_when(
+    Status == "native" ~ "nat", 
+    Status == "nonnative" ~ "nn", 
+    TRUE ~ Status)
+  ) %>% 
+  mutate(Lifecycle = case_when(
+    Lifecycle == "annual" ~ "ann", 
+    Lifecycle == "perennial" ~ "per", 
+    TRUE ~ Lifecycle)
+    )  %>% 
+   relocate(Status, Lifecycle, Lifeform, Family, DEG, MTX, INT, .after = Species)  %>% 
+  mutate(
+    DEG = case_when(
+      DEG == 0 ~ "-",                            # Replace 0 with NA
+      DEG > 0 & DEG < 0.001 ~ "<0.001",                    # Replace values between 0 and 0.001
+      TRUE ~ as.character(DEG)                             # Keep all other values
+    ),
+    MTX = case_when(
+      MTX == 0 ~ "-",
+      MTX > 0 & MTX < 0.001 ~ "<0.001",
+      TRUE ~ as.character(MTX)
+    ),
+    INT = case_when(
+      INT == 0 ~ "-",
+      INT > 0 & INT < 0.001 ~ "<0.001",
+      TRUE ~ as.character(INT)
+    )
+  )
+  
+median_seedgermcluster
+  
+
+      
+
+# Print as a gt table
+table_germ <- median_seedgermcluster %>%
+  gt() %>%
+  tab_header(
+    title = "Median Average Germination by Cluster",
+    #subtitle = "Mean ± Standard Deviation for Elevation, Hillshade, Slope, Southwestness, Fire Events, and Coordinates"
+  ) %>%
+  cols_align(
+    align = "left", # Center alignment
+    columns = "Species" # Specify the "cluster" column
+  ) %>%
+  tab_options(
+    table.width = pct(80) # Make the table width 100%
+  ) 
+table_germ
+
+# Export the table as a word doc.
+gtsave(table_germ, 
+       "Ch1_Degradation_figures/table_germ_clustergroups_dec11.docx", # can also export as .png
+       expand = 10)
+
+```
